crates/tuna/tests/parser/fail/self-class-param-kw.som
"test:
fail-message:
  - contains: define
  - contains: self
"

SelfClassParamKw = (
  ----

  test: self makes: errors = ('yes')
)
